# openai.cpp

./: CMakeLists.txt  README.md
examples/: chat.json  embeddings.json  files.json  fine-tuning.json  image-edit.json  image-variation.json  images.json  moderation.json  speech.json  transcription.json  translate.json
include/: openai.h
test/: CMakeLists.txt  main.cpp
